added missing localization

--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -534,6 +534,9 @@
   <data name="ButtonValidateExport" xml:space="preserve">
     <value>Validate Export</value>
   </data>
+  <data name="ChangeVersion" xml:space="preserve">
+    <value>Change Version</value>
+  </data>
   <data name="ExpRange" xml:space="preserve">
     <value>ExpRange</value>
   </data>
@@ -554,6 +557,9 @@
   </data>
   <data name="MED" xml:space="preserve">
     <value>MED</value>
+  </data>
+  <data name="Modify" xml:space="preserve">
+    <value>Modify</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Next</value>
