--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -537,6 +537,9 @@
   <data name="Article" xml:space="preserve">
     <value>Articolo</value>
   </data>
+  <data name="ChangeVersion" xml:space="preserve">
+    <value>Cambia versione</value>
+  </data>
   <data name="ExpRange" xml:space="preserve">
     <value>ExpRange</value>
   </data>
@@ -554,6 +557,9 @@
   </data>
   <data name="MED" xml:space="preserve">
     <value>MED</value>
+  </data>
+  <data name="Modify" xml:space="preserve">
+    <value>Modifica</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Successivo</value>
