--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -534,6 +534,9 @@
   <data name="ButtonValidateExport" xml:space="preserve">
     <value>エクスポート検証</value>
   </data>
+  <data name="ChangeVersion" xml:space="preserve">
+    <value>バージョン変更</value>
+  </data>
   <data name="ExpRange" xml:space="preserve">
     <value>更新範囲</value>
   </data>
@@ -541,7 +544,7 @@
     <value>表示 _START_ から _END_ 全 _TOTAL_ 項目中</value>
   </data>
   <data name="infofiltered" xml:space="preserve">
-    <value>(filtered from _MAX_ total 項目中)</value>
+    <value>(フィルター： 全 _MAX_ 項目中)</value>
   </data>
   <data name="lengthmenu" xml:space="preserve">
     <value>表示 _MENU_ 	項目</value>
@@ -555,11 +558,14 @@
   <data name="MED" xml:space="preserve">
     <value>終了日</value>
   </data>
+  <data name="Modify" xml:space="preserve">
+    <value>修正</value>
+  </data>
   <data name="Next" xml:space="preserve">
     <value>次</value>
   </data>
   <data name="noRowsSelected" xml:space="preserve">
-    <value>Click a row to select it</value>
+    <value>行をクリックして選択してください</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>前</value>
@@ -571,7 +577,7 @@
     <value>1 行選択</value>
   </data>
   <data name="Search" xml:space="preserve">
-    <value>Search</value>
+    <value>検索</value>
   </data>
   <data name="Select" xml:space="preserve">
     <value>選択</value>
