--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -588,4 +588,7 @@
   <data name="Version" xml:space="preserve">
     <value>Version</value>
   </data>
+  <data name="ButtonDecryptPwd" xml:space="preserve">
+    <value>Decrypt password</value>
+  </data>
 </root>
