minor fixes on elearning localization

--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -591,4 +591,10 @@
   <data name="ButtonDecryptPwd" xml:space="preserve">
     <value>Decripta password</value>
   </data>
+  <data name="View_Download_Text1" xml:space="preserve">
+    <value>Scarica la versione beta del nuovo rilascio.</value>
+  </data>
+  <data name="View_Download_Text2" xml:space="preserve">
+    <value>ThinkDesign 2016 beta (x64) - 1.86 GB</value>
+  </data>
 </root>
