--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -591,4 +591,10 @@
   <data name="ButtonDecryptPwd" xml:space="preserve">
     <value>Decrypt password</value>
   </data>
+  <data name="View_Download_Text1" xml:space="preserve">
+    <value>新しいバージョンのベータ版をダウンロードいただけます。</value>
+  </data>
+  <data name="View_Download_Text2" xml:space="preserve">
+    <value>ThinkDesign 2016 beta (x64) - 1.86 GB</value>
+  </data>
 </root>
