added korean localization

--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -232,7 +232,7 @@
     <value>Description</value>
   </data>
   <data name="Description2011TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the ThinkDesign Viewer 2011 application.</value>
+    <value>This self extracting file will install the TDViewerLight 2011 application.</value>
   </data>
   <data name="Description2011ThinkDesign32bit" xml:space="preserve">
     <value>This self extracting file will install the official ThinkDesign suite 2011 32bit.</value>
@@ -244,7 +244,7 @@
     <value>Utilities and plug-ins for version 2011.</value>
   </data>
   <data name="Description2012TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the ThinkDesign Viewer 2012 application.</value>
+    <value>This self extracting file will install the TDViewerLight 2012 application.</value>
   </data>
   <data name="Description2012ThinkDesign32bit" xml:space="preserve">
     <value>This self extracting file will install the official ThinkDesign suite 2012 32bit.</value>
@@ -259,7 +259,7 @@
     <value>Utilities and plug-ins for version 2012.</value>
   </data>
   <data name="Description2013TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the ThinkDesign Viewer 2013 application.</value>
+    <value>This self extracting file will install the TDViewerLight 2013 application.</value>
   </data>
   <data name="Description2013ThinkDesign32bit" xml:space="preserve">
     <value>This self extracting file will install the official ThinkDesign suite 2013 32bit.</value>
@@ -274,7 +274,7 @@
     <value>Utilities and plug-ins for version 2013.</value>
   </data>
   <data name="Description2014TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the ThinkDesign Viewer 2014 application.</value>
+    <value>This self extracting file will install the TDViewerLight 2014 application.</value>
   </data>
   <data name="Description2014ThinkDesign32bit" xml:space="preserve">
     <value>This self extracting file will install the official ThinkDesign suite 2014 32bit.</value>
@@ -289,7 +289,7 @@
     <value>Utilities and plug-ins for version 2014.</value>
   </data>
   <data name="Description2015TDViewerLightSP3" xml:space="preserve">
-    <value>This self extracting file will install the ThinkDesign Viewer 2015 SP3 application.</value>
+    <value>This self extracting file will install the TDViewerLight 2015 SP3 application.</value>
   </data>
   <data name="Description2015ThinkDesign32bitSP2" xml:space="preserve">
     <value>SP2 Legacy version for old systems.</value>
