minor fixes on localization

--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -589,7 +589,7 @@
     <value>バージョン</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>Decrypt password</value>
+    <value>パスワード解読</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>新しいバージョンのベータ版をダウンロードいただけます。</value>
