--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -127,7 +127,7 @@
     <value>설명</value>
   </data>
   <data name="Description2011TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2011 application.</value>
+    <value>이 자동 압축 풀림 파일은 TDViewerLight 2011 프로그램을 설치합니다.</value>
   </data>
   <data name="Description2011ThinkDesign32bit" xml:space="preserve">
     <value>이 자동 압축 풀림 파일은 ThinkDesign suite 2011 32bit 공식 버전을 설치합니다.</value>
@@ -139,7 +139,7 @@
     <value>버전 2011 용 유틸리티 도구</value>
   </data>
   <data name="Description2012TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2012 application.</value>
+    <value>이 자동 압축 풀림 파일은 TDViewerLight 2012 프로그램을 설치합니다.</value>
   </data>
   <data name="Description2012ThinkDesign32bit" xml:space="preserve">
     <value>이 자동 압축 풀림 파일은 ThinkDesign suite 2012 32bit 공식 버전을 설치합니다.</value>
@@ -154,7 +154,7 @@
     <value>버전 2012 용 유틸리티 도구</value>
   </data>
   <data name="Description2013TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2013 application.</value>
+    <value>이 자동 압축 풀림 파일은 TDViewerLight 2013 프로그램을 설치합니다.</value>
   </data>
   <data name="Description2013ThinkDesign32bit" xml:space="preserve">
     <value>이 자동 압축 풀림 파일은 ThinkDesign suite 2013 32bit 공식 버전을 설치합니다.</value>
@@ -169,7 +169,7 @@
     <value>버전 2013 용 유틸리티 도구</value>
   </data>
   <data name="Description2014TDViewerLight" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2014 application.</value>
+    <value>이 자동 압축 풀림 파일은 TDViewerLight 2014 프로그램을 설치합니다.</value>
   </data>
   <data name="Description2014ThinkDesign32bit" xml:space="preserve">
     <value>이 자동 압축 풀림 파일은 ThinkDesign suite 2014 32bit 공식 버전을 설치합니다.</value>
@@ -184,7 +184,7 @@
     <value>버전 2014 용 유틸리티 도구</value>
   </data>
   <data name="Description2015TDViewerLightSP3" xml:space="preserve">
-    <value>This self extracting file will install the TDViewerLight 2015 SP3 application.</value>
+    <value>이 자동 압축 풀림 파일은 TDViewerLight 2015 SP3 프로그램을 설치합니다.</value>
   </data>
   <data name="Description2015ThinkDesign32bitSP2" xml:space="preserve">
     <value>SP2 Legacy version for old systems.</value>
@@ -589,7 +589,7 @@
     <value>버전</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>Decrypt password</value>
+    <value>비밀번호 해독</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>새로운 베타 버전을 다운로드하실 수 있습니다.</value>
