added download for 2016

--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -196,7 +196,7 @@
     <value>이 자동 압축 풀림 파일은 ThinkDesign suite 2015 64bit SP2 공식 버전을 설치합니다.</value>
   </data>
   <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
-    <value>공식버전</value>
+    <value>이 자동 압축 풀림 파일은 ThinkDesign suite 2015 64bit SP3 공식 버전을 설치합니다.</value>
   </data>
   <data name="Description2015thinkPLMSP2" xml:space="preserve">
     <value>thinkPLM 2015 SP2</value>
@@ -207,14 +207,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Floating 라이선스 서버의 설치와 버전 2015 용 유틸리티 도구</value>
   </data>
-  <data name="Description2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>Legacy beta version for old systems.</value>
+  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
+    <value>TD 2016 legacy beta version for old systems.</value>
   </data>
-  <data name="Description2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit 베타버전</value>
+  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
+    <value>공식버전</value>
   </data>
-  <data name="Description2016thinkPLMbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 베타입니다.</value>
+  <data name="Description2016thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2016 공식버전</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
@@ -297,14 +297,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2015.2/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_td_2016T1_b20617.iso</value>
+  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20614/dvd_td_64bit_2016T1_b20614.iso</value>
+  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016thinkPLMbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20614/dvd_thinkplm_2016T1_b20614.iso</value>
+  <data name="Download2016thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>{0}은 적어도 {2}자 이상이어야합니다.</value>
@@ -405,14 +405,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>유틸리티 도구 &amp; 플로팅라이선스 설치</value>
   </data>
-  <data name="Product2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit 베타버전</value>
+  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit</value>
   </data>
-  <data name="Product2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit 베타버전</value>
+  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit</value>
   </data>
-  <data name="Product2016thinkPLMbeta" xml:space="preserve">
-    <value>thinkPLM 2016 베타버전</value>
+  <data name="Product2016thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2016</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>비밀번호를 입력하세요</value>
@@ -592,9 +592,27 @@
     <value>비밀번호 해독</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
-    <value>새로운 베타 버전을 다운로드하실 수 있습니다.</value>
+    <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 beta (x64) - 1.86 GB</value>
+    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+  </data>
+  <data name="Description2016TDViewerLight" xml:space="preserve">
+    <value>이 자동 압축 풀림 파일은 TDViewerLight 2016 프로그램을 설치합니다.</value>
+  </data>
+  <data name="Description2016Utilitytools" xml:space="preserve">
+    <value>Floating 라이선스 서버의 설치와 버전 2016 용 유틸리티 도구</value>
+  </data>
+  <data name="Download2016TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  </data>
+  <data name="Download2016Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
+  </data>
+  <data name="Product2016TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2016</value>
+  </data>
+  <data name="Product2016Utilitytools" xml:space="preserve">
+    <value>유틸리티 도구 &amp; 플로팅라이선스 설치</value>
   </data>
 </root>
