--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -181,7 +181,7 @@
     <value>Welcome to the new Customer Care portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>ThinkDesign 2016 beta is now available! Have a look at the Download section.</value>
+    <value>The official release of ThinkDesign 2016 is now available! Have a look at the Download section.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Try for free ThinkDesign 2015! Write to us to know more.</value>
@@ -312,14 +312,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Floating Licensing Installer, utilities and plug-ins for version 2015.</value>
   </data>
-  <data name="Description2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>Legacy beta version for old systems.</value>
+  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
+    <value>TD 2016 legacy version for old systems.</value>
   </data>
-  <data name="Description2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>Beta version of ThinkDesign 2016.</value>
+  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
+    <value>Official release of ThinkDesign 2016.</value>
   </data>
-  <data name="Description2016thinkPLMbeta" xml:space="preserve">
-    <value>This section includes thinkPLM 2016 beta version.</value>
+  <data name="Description2016thinkPLM" xml:space="preserve">
+    <value>This section includes thinkPLM 2016 official version.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -402,14 +402,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20712/dvd_td_2016T1_b20712.iso</value>
+  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20712/dvd_td_64bit_2016T1_b20712.iso</value>
+  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016thinkPLMbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_thinkplm_2016T1_b20617.iso</value>
+  <data name="Download2016thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
   </data>
   <data name="Product" xml:space="preserve">
     <value>Product</value>
@@ -495,14 +495,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>Utility tools &amp; Floating Licensing Installer</value>
   </data>
-  <data name="Product2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit beta</value>
+  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit</value>
   </data>
-  <data name="Product2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit beta</value>
+  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit</value>
   </data>
-  <data name="Product2016thinkPLMbeta" xml:space="preserve">
-    <value>thinkPLM 2016 beta</value>
+  <data name="Product2016thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2016</value>
   </data>
   <data name="View_HomeIndex_of" xml:space="preserve">
     <value>of</value>
@@ -592,9 +592,27 @@
     <value>Decrypt password</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
-    <value>Download here the beta version of the new release.</value>
+    <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 beta (x64) - 1.86 GB</value>
+    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+  </data>
+  <data name="Description2016TDViewerLight" xml:space="preserve">
+    <value>This self extracting file will install the TDViewerLight 2016 application.</value>
+  </data>
+  <data name="Description2016Utilitytools" xml:space="preserve">
+    <value>Floating Licensing Installer, utilities and plug-ins for version 2016.</value>
+  </data>
+  <data name="Download2016TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  </data>
+  <data name="Download2016Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
+  </data>
+  <data name="Product2016TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2016</value>
+  </data>
+  <data name="Product2016Utilitytools" xml:space="preserve">
+    <value>Utility tools &amp; Floating Licensing Installer</value>
   </data>
 </root>
