--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -207,14 +207,14 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>Floating Licensing Installer, procedure di utilità e plug-in per la versione 2015.</value>
   </data>
-  <data name="Description2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>TD 2016 versione legacy beta per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
+  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
+    <value>TD 2016 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
-  <data name="Description2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>Versione beta di ThinkDesign 2016.</value>
+  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
+    <value>Release ufficiale di ThinkDesign 2016.</value>
   </data>
-  <data name="Description2016thinkPLMbeta" xml:space="preserve">
-    <value>Questa sezione include la versione beta di thinkPLM 2016.</value>
+  <data name="Description2016thinkPLM" xml:space="preserve">
+    <value>Questa sezione include la versione ufficiale di thinkPLM 2016.</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
@@ -297,14 +297,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20712/dvd_td_2016T1_b20712.iso</value>
+  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20712/dvd_td_64bit_2016T1_b20712.iso</value>
+  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016thinkPLMbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_thinkplm_2016T1_b20617.iso</value>
+  <data name="Download2016thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>La {0} deve essere lunga almeno {2} caratteri.</value>
@@ -405,14 +405,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>Utility tools &amp; Floating Licensing Installer</value>
   </data>
-  <data name="Product2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit beta</value>
+  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit</value>
   </data>
-  <data name="Product2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit beta</value>
+  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit</value>
   </data>
-  <data name="Product2016thinkPLMbeta" xml:space="preserve">
-    <value>thinkPLM 2016 beta</value>
+  <data name="Product2016thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2016</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>Inserire Password</value>
@@ -463,7 +463,7 @@
     <value>Benvenuto nel nuovo portale del Customer Care!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>ThinkDesign 2016 beta è stata rilasciata ed è ora disponibile nella sezione di Download.</value>
+    <value>La release ufficiale di ThinkDesign 2016 è stata rilasciata ed è ora disponibile nella sezione di Download.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
     <value>Prova gratuitamente ThinkDesign 2015! Scrivici per saperne di più.</value>
@@ -592,9 +592,27 @@
     <value>Decripta password</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
-    <value>Scarica la versione beta del nuovo rilascio.</value>
+    <value>Scarica la nuova release ufficiale!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 beta (x64) - 1.86 GB</value>
+    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+  </data>
+  <data name="Description2016TDViewerLight" xml:space="preserve">
+    <value>Questo self-extract permette di installare l'applicazione TDViewerLight 2016.</value>
+  </data>
+  <data name="Description2016Utilitytools" xml:space="preserve">
+    <value>Floating Licensing Installer, procedure di utilità e plug-in per la versione 2016.</value>
+  </data>
+  <data name="Download2016TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  </data>
+  <data name="Download2016Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
+  </data>
+  <data name="Product2016TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2016</value>
+  </data>
+  <data name="Product2016Utilitytools" xml:space="preserve">
+    <value>Utility tools &amp; Floating Licensing Installer</value>
   </data>
 </root>
