--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -196,7 +196,7 @@
     <value>この自己解凍ファイルは ThinkDesign suite 2015 64bit SP2 公式版をインストールします。</value>
   </data>
   <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
-    <value>公式版。</value>
+    <value>この自己解凍ファイルは ThinkDesign suite 2015 64bit SP3 公式版をインストールします。</value>
   </data>
   <data name="Description2015thinkPLMSP2" xml:space="preserve">
     <value>thinkPLM 2015 SP2。</value>
@@ -207,13 +207,13 @@
   <data name="Description2015Utilitytools" xml:space="preserve">
     <value>フローティングライセンスサーバーのインストーラーとバージョン 2015 用ユーティリティツール。</value>
   </data>
-  <data name="Description2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>Legacy beta version for old systems.</value>
+  <data name="Description2016ThinkDesign32bit" xml:space="preserve">
+    <value>TD 2016 legacy version for old systems.</value>
   </data>
-  <data name="Description2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 のベータ版です。</value>
+  <data name="Description2016ThinkDesign64bit" xml:space="preserve">
+    <value>公式版。</value>
   </data>
-  <data name="Description2016thinkPLMbeta" xml:space="preserve">
+  <data name="Description2016thinkPLM" xml:space="preserve">
     <value>thinkPLM 2016 ベータ版。</value>
   </data>
   <data name="Download2011TDViewerLight" xml:space="preserve">
@@ -297,14 +297,14 @@
   <data name="Download2015Utilitytools" xml:space="preserve">
     <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2015.2/Tools2015.zip</value>
   </data>
-  <data name="Download2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_td_2016T1_b20617.iso</value>
+  <data name="Download2016ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20614/dvd_td_64bit_2016T1_b20614.iso</value>
+  <data name="Download2016ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_td_64bit_2016T1_b20718.iso</value>
   </data>
-  <data name="Download2016thinkPLMbeta" xml:space="preserve">
-    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20614/dvd_thinkplm_2016T1_b20614.iso</value>
+  <data name="Download2016thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/dvd_thinkplm_2016T1_b20718.iso</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>{0} は少なくとも {2} 文字以上である必要があります。</value>
@@ -405,14 +405,14 @@
   <data name="Product2015Utilitytools" xml:space="preserve">
     <value>ユーティリティツールとフローティングライセンスサーバー</value>
   </data>
-  <data name="Product2016ThinkDesign32bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 32bit beta</value>
+  <data name="Product2016ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit</value>
   </data>
-  <data name="Product2016ThinkDesign64bitbeta" xml:space="preserve">
-    <value>ThinkDesign 2016 64bit ベータ版</value>
+  <data name="Product2016ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit</value>
   </data>
-  <data name="Product2016thinkPLMbeta" xml:space="preserve">
-    <value>thinkPLM 2016 ベータ版</value>
+  <data name="Product2016thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2016</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>パスワードを入力してください。</value>
@@ -592,9 +592,27 @@
     <value>パスワード解読</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
-    <value>新しいバージョンのベータ版をダウンロードいただけます。</value>
+    <value>Download here the official release!</value>
   </data>
   <data name="View_Download_Text2" xml:space="preserve">
-    <value>ThinkDesign 2016 beta (x64) - 1.86 GB</value>
+    <value>ThinkDesign 2016 (x64) - 1.9 GB</value>
+  </data>
+  <data name="Description2016TDViewerLight" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2016 をインストールします。</value>
+  </data>
+  <data name="Description2016Utilitytools" xml:space="preserve">
+    <value>フローティングライセンスサーバーのインストーラーとバージョン 2016 用ユーティリティツール。</value>
+  </data>
+  <data name="Download2016TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20718/tdviewer_2016T1_b20718_64bit.iso</value>
+  </data>
+  <data name="Download2016Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2016.zip</value>
+  </data>
+  <data name="Product2016TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2016</value>
+  </data>
+  <data name="Product2016Utilitytools" xml:space="preserve">
+    <value>ユーティリティツールとフローティングライセンスサーバー</value>
   </data>
 </root>
