added japanese & korean localization for company page

--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -615,4 +615,13 @@
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>ユーティリティツールとフローティングライセンスサーバー</value>
   </data>
+  <data name="Kind" xml:space="preserve">
+    <value>種別</value>
+  </data>
+  <data name="SalesRep" xml:space="preserve">
+    <value>担当営業</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>状態</value>
+  </data>
 </root>
