--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -615,4 +615,13 @@
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>유틸리티 도구 &amp; 플로팅라이선스 설치</value>
   </data>
+  <data name="Kind" xml:space="preserve">
+    <value>종별</value>
+  </data>
+  <data name="SalesRep" xml:space="preserve">
+    <value>영업담당자</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>상태</value>
+  </data>
 </root>
