--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -615,4 +615,13 @@
   <data name="Product2016Utilitytools" xml:space="preserve">
     <value>Utility tools &amp; Floating Licensing Installer</value>
   </data>
+  <data name="Kind" xml:space="preserve">
+    <value>Kind</value>
+  </data>
+  <data name="SalesRep" xml:space="preserve">
+    <value>SalesRep</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>Status</value>
+  </data>
 </root>
