localized license sub pages

--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -541,7 +541,7 @@
     <value>Cambia versione</value>
   </data>
   <data name="LastExp" xml:space="preserve">
-    <value>LastExp</value>
+    <value>Ultima Scadenza</value>
   </data>
   <data name="info" xml:space="preserve">
     <value>Visualizzato _START_ a _END_ di _TOTAL_ elementi</value>
@@ -619,9 +619,39 @@
     <value>Tipo</value>
   </data>
   <data name="SalesRep" xml:space="preserve">
-    <value>RapprComm</value>
+    <value>VAR</value>
   </data>
   <data name="Status" xml:space="preserve">
     <value>Stato</value>
+  </data>
+  <data name="Address" xml:space="preserve">
+    <value>Indirizzo</value>
+  </data>
+  <data name="City" xml:space="preserve">
+    <value>Città</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Nazione</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="ExportingLicense" xml:space="preserve">
+    <value>Stai esportando la licenza:</value>
+  </data>
+  <data name="ExportLicense" xml:space="preserve">
+    <value>Esporta Licenza</value>
+  </data>
+  <data name="GenerateLicense" xml:space="preserve">
+    <value>Genera Licenza</value>
+  </data>
+  <data name="InstallingLicense" xml:space="preserve">
+    <value>Stai installando la licenza:</value>
+  </data>
+  <data name="Province" xml:space="preserve">
+    <value>Provincia</value>
+  </data>
+  <data name="ZIP" xml:space="preserve">
+    <value>Codice Postale</value>
   </data>
 </root>
