--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -624,4 +624,34 @@
   <data name="Status" xml:space="preserve">
     <value>상태</value>
   </data>
+  <data name="Address" xml:space="preserve">
+    <value>주소:</value>
+  </data>
+  <data name="City" xml:space="preserve">
+    <value>도시:</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>국가:</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>이메일：</value>
+  </data>
+  <data name="ExportingLicense" xml:space="preserve">
+    <value>다음의 라이선스를 내보냅니다.</value>
+  </data>
+  <data name="ExportLicense" xml:space="preserve">
+    <value>라이선스 내보내기</value>
+  </data>
+  <data name="GenerateLicense" xml:space="preserve">
+    <value>라이선스 생성</value>
+  </data>
+  <data name="InstallingLicense" xml:space="preserve">
+    <value>이 라이선스를 설치하고 있습니다.</value>
+  </data>
+  <data name="Province" xml:space="preserve">
+    <value>지역:</value>
+  </data>
+  <data name="ZIP" xml:space="preserve">
+    <value>우편번호:</value>
+  </data>
 </root>
