--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -619,9 +619,39 @@
     <value>Kind</value>
   </data>
   <data name="SalesRep" xml:space="preserve">
-    <value>SalesRep</value>
+    <value>Sales Rep</value>
   </data>
   <data name="Status" xml:space="preserve">
     <value>Status</value>
+  </data>
+  <data name="Address" xml:space="preserve">
+    <value>Address</value>
+  </data>
+  <data name="City" xml:space="preserve">
+    <value>City</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>Country</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="ExportingLicense" xml:space="preserve">
+    <value>You are exporting this license:</value>
+  </data>
+  <data name="ExportLicense" xml:space="preserve">
+    <value>Export License</value>
+  </data>
+  <data name="GenerateLicense" xml:space="preserve">
+    <value>Generate License</value>
+  </data>
+  <data name="InstallingLicense" xml:space="preserve">
+    <value>You are installing this license:</value>
+  </data>
+  <data name="Province" xml:space="preserve">
+    <value>Province</value>
+  </data>
+  <data name="ZIP" xml:space="preserve">
+    <value>ZIP</value>
   </data>
 </root>
