--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -624,4 +624,34 @@
   <data name="Status" xml:space="preserve">
     <value>状態</value>
   </data>
+  <data name="Address" xml:space="preserve">
+    <value>住所：</value>
+  </data>
+  <data name="City" xml:space="preserve">
+    <value>市区町村：</value>
+  </data>
+  <data name="Country" xml:space="preserve">
+    <value>国：</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>メールアドレス：</value>
+  </data>
+  <data name="ExportingLicense" xml:space="preserve">
+    <value>次のライセンスをエクスポートします。</value>
+  </data>
+  <data name="ExportLicense" xml:space="preserve">
+    <value>ライセンスのエクスポート</value>
+  </data>
+  <data name="GenerateLicense" xml:space="preserve">
+    <value>ライセンス取得</value>
+  </data>
+  <data name="InstallingLicense" xml:space="preserve">
+    <value>次のライセンスを取得します。</value>
+  </data>
+  <data name="Province" xml:space="preserve">
+    <value>県：</value>
+  </data>
+  <data name="ZIP" xml:space="preserve">
+    <value>郵便番号：</value>
+  </data>
 </root>
