--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -520,7 +520,7 @@
     <value>Esporta</value>
   </data>
   <data name="ButtonInstall2015" xml:space="preserve">
-    <value>Installa 2015</value>
+    <value>Installa</value>
   </data>
   <data name="ButtonInstallMin2015" xml:space="preserve">
     <value>Installa &lt; 2015</value>
@@ -538,7 +538,7 @@
     <value>Articolo</value>
   </data>
   <data name="ChangeVersion" xml:space="preserve">
-    <value>Cambia versione</value>
+    <value>Cambia versione &lt; 2015</value>
   </data>
   <data name="LastExp" xml:space="preserve">
     <value>Ultima Scadenza</value>
@@ -589,7 +589,7 @@
     <value>Versione</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>Decripta password</value>
+    <value>Decripta password &lt; 2015</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>Scarica la nuova release ufficiale!</value>
