--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -523,7 +523,7 @@
     <value>エクスポート</value>
   </data>
   <data name="ButtonInstall2015" xml:space="preserve">
-    <value>インストール 2015</value>
+    <value>インストール</value>
   </data>
   <data name="ButtonInstallMin2015" xml:space="preserve">
     <value>インストール &lt; 2015</value>
@@ -535,7 +535,7 @@
     <value>エクスポート検証</value>
   </data>
   <data name="ChangeVersion" xml:space="preserve">
-    <value>バージョン変更</value>
+    <value>バージョン変更 &lt; 2015</value>
   </data>
   <data name="LastExp" xml:space="preserve">
     <value>更新範囲</value>
@@ -589,7 +589,7 @@
     <value>バージョン</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>パスワード解読</value>
+    <value>パスワード解読 &lt; 2015</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>公式版のダウンロードが可能です！</value>
