--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -523,7 +523,7 @@
     <value>내보내기</value>
   </data>
   <data name="ButtonInstall2015" xml:space="preserve">
-    <value>설치 2015</value>
+    <value>설치</value>
   </data>
   <data name="ButtonInstallMin2015" xml:space="preserve">
     <value>설치 &lt; 2015</value>
@@ -535,7 +535,7 @@
     <value>내보내기 검증</value>
   </data>
   <data name="ChangeVersion" xml:space="preserve">
-    <value>버전변경</value>
+    <value>버전변경 &lt; 2015</value>
   </data>
   <data name="LastExp" xml:space="preserve">
     <value>갱신범위</value>
@@ -589,7 +589,7 @@
     <value>버전</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>비밀번호 해독</value>
+    <value>비밀번호 해독 &lt; 2015</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>Download here the official release!</value>
