--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -523,7 +523,7 @@
     <value>Export</value>
   </data>
   <data name="ButtonInstall2015" xml:space="preserve">
-    <value>Install 2015</value>
+    <value>Install</value>
   </data>
   <data name="ButtonInstallMin2015" xml:space="preserve">
     <value>Install &lt; 2015</value>
@@ -535,7 +535,7 @@
     <value>Validate Export</value>
   </data>
   <data name="ChangeVersion" xml:space="preserve">
-    <value>Change Version</value>
+    <value>Change Version &lt; 2015</value>
   </data>
   <data name="LastExp" xml:space="preserve">
     <value>LastExp</value>
@@ -589,7 +589,7 @@
     <value>Version</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>Decrypt password</value>
+    <value>Decrypt password &lt; 2015</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>Download here the official release!</value>
