added new button for admin update product list

--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -657,11 +657,17 @@
   <data name="AssignedTo" xml:space="preserve">
     <value>할당대상</value>
   </data>
+  <data name="CaseHistoryID" xml:space="preserve">
+    <value>사례 이력 ID</value>
+  </data>
   <data name="CaseID" xml:space="preserve">
     <value>사례 ID</value>
   </data>
   <data name="Contact" xml:space="preserve">
     <value>연락처</value>
+  </data>
+  <data name="CreatedBy" xml:space="preserve">
+    <value>의해 생성됨</value>
   </data>
   <data name="CreatedOn" xml:space="preserve">
     <value>에 생성됨</value>
