--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -657,11 +657,17 @@
   <data name="AssignedTo" xml:space="preserve">
     <value>Assegnato a</value>
   </data>
+  <data name="CaseHistoryID" xml:space="preserve">
+    <value>ID Storia Caso</value>
+  </data>
   <data name="CaseID" xml:space="preserve">
     <value>ID caso</value>
   </data>
   <data name="Contact" xml:space="preserve">
     <value>Contatto</value>
+  </data>
+  <data name="CreatedBy" xml:space="preserve">
+    <value>Creato da</value>
   </data>
   <data name="CreatedOn" xml:space="preserve">
     <value>Creato il</value>
