--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -657,11 +657,17 @@
   <data name="AssignedTo" xml:space="preserve">
     <value>担当者</value>
   </data>
+  <data name="CaseHistoryID" xml:space="preserve">
+    <value>問合せ履歴ID</value>
+  </data>
   <data name="CaseID" xml:space="preserve">
     <value>問合せＩＤ</value>
   </data>
   <data name="Contact" xml:space="preserve">
     <value>担当者</value>
+  </data>
+  <data name="CreatedBy" xml:space="preserve">
+    <value>作成者</value>
   </data>
   <data name="CreatedOn" xml:space="preserve">
     <value>作成日</value>
