--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -657,11 +657,17 @@
   <data name="AssignedTo" xml:space="preserve">
     <value>Assigned To</value>
   </data>
+  <data name="CaseHistoryID" xml:space="preserve">
+    <value>Case History ID</value>
+  </data>
   <data name="CaseID" xml:space="preserve">
     <value>Case ID</value>
   </data>
   <data name="Contact" xml:space="preserve">
     <value>Contact</value>
+  </data>
+  <data name="CreatedBy" xml:space="preserve">
+    <value>Created By</value>
   </data>
   <data name="CreatedOn" xml:space="preserve">
     <value>Created on</value>
