added new button for upgrade from 2015 to 2015

--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -711,4 +711,7 @@
   <data name="Update" xml:space="preserve">
     <value>更新</value>
   </data>
+  <data name="ButtonUpgrade" xml:space="preserve">
+    <value>Upgrade</value>
+  </data>
 </root>
