--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -711,4 +711,7 @@
   <data name="Update" xml:space="preserve">
     <value>Aggiorna</value>
   </data>
+  <data name="ButtonUpgrade" xml:space="preserve">
+    <value>Aggiorna</value>
+  </data>
 </root>
