--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -711,4 +711,7 @@
   <data name="Update" xml:space="preserve">
     <value>갱신</value>
   </data>
+  <data name="ButtonUpgrade" xml:space="preserve">
+    <value>Upgrade</value>
+  </data>
 </root>
