--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -714,4 +714,7 @@
   <data name="ButtonUpgrade" xml:space="preserve">
     <value>Aggiorna</value>
   </data>
+  <data name="ModifiedOn" xml:space="preserve">
+    <value>Modificato il</value>
+  </data>
 </root>
