--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -714,4 +714,7 @@
   <data name="ButtonUpgrade" xml:space="preserve">
     <value>Upgrade</value>
   </data>
+  <data name="ModifiedOn" xml:space="preserve">
+    <value>Modified On</value>
+  </data>
 </root>
