--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -589,7 +589,7 @@
     <value>Version</value>
   </data>
   <data name="ButtonDecryptPwd" xml:space="preserve">
-    <value>Decrypt password &lt; 2015</value>
+    <value>Lizenz &lt; 2015 entschlüsseln</value>
   </data>
   <data name="View_Download_Text1" xml:space="preserve">
     <value>Downloaden Sie hier das offizielle Release!</value>
