added new feature: add new license

--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -154,16 +154,16 @@
     <value>Customer Care</value>
   </data>
   <data name="View_Home_BreakingNews" xml:space="preserve">
-    <value>Breaking News</value>
+    <value>Neuigkeiten</value>
   </data>
   <data name="View_Home_CaseManagement" xml:space="preserve">
     <value>Anfrageverwaltung</value>
   </data>
   <data name="View_Home_CaseManagement_Text1" xml:space="preserve">
-    <value>Contact our Customer Care and open a New Case.</value>
+    <value>Kontaktieren Sie unseren Kundendienst und erstellen Sie eine neue Supportanfrage.</value>
   </data>
   <data name="View_Home_CaseManagement_Text2" xml:space="preserve">
-    <value>Use your old credentials to access this section.</value>
+    <value>Verwenden Sie Ihre alten Zugangsdaten um diesen Bereich zu nutzen.</value>
   </data>
   <data name="View_Home_ELearning" xml:space="preserve">
     <value>e-Learning</value>
@@ -187,7 +187,7 @@
     <value>Testen Sie ThinkDesign 2016 kostenlos! Schreiben Sie uns um mehr zu erfahren.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
-    <value>ThinkDesign Hielfe</value>
+    <value>ThinkDesign Hilfe</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
     <value>Release Notes &amp; Benutzerhandbuch 2016 - in Arbeit.</value>
@@ -301,7 +301,7 @@
     <value>Diese selbstextrahierende Datei installiert ThinkDesign Suite 2015 SP2 64bit.</value>
   </data>
   <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
-    <value>Offizielles Release ThinkDesign 2015.</value>
+    <value>Diese selbstextrahierende Datei installiert ThinkDesign Suite 2015 SP3 64bit.</value>
   </data>
   <data name="Description2015thinkPLMSP2" xml:space="preserve">
     <value>thinkPLM Version 2015 SP2.</value>
@@ -646,7 +646,7 @@
     <value>Lizenz generieren</value>
   </data>
   <data name="InstallingLicense" xml:space="preserve">
-    <value>You are installing this license:</value>
+    <value>Sie installieren diese Lizenz:</value>
   </data>
   <data name="Province" xml:space="preserve">
     <value>Bundesland</value>
@@ -715,6 +715,6 @@
     <value>Upgrade</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
-    <value>Modified On</value>
+    <value>Geändert am</value>
   </data>
 </root>
