--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -196,7 +196,7 @@
     <value>Questo self-extract permette di installare ThinkDesign 2015 SP2 64 bit.</value>
   </data>
   <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
-    <value>Versione raccomandata. Questo self-extract permette di installare ThinkDesign 2015 SP3 64 bit.</value>
+    <value>Questo self-extract permette di installare ThinkDesign 2015 SP3 64 bit.</value>
   </data>
   <data name="Description2015thinkPLMSP2" xml:space="preserve">
     <value>Questo self-extract permette di installare thinkPLM 2015 SP2.</value>
@@ -211,7 +211,7 @@
     <value>TD 2016 versione legacy per sistemi operativi obsoleti o integrazione con software non aggiornati.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Release ufficiale di ThinkDesign 2016.</value>
+    <value>Versione raccomandata. Release ufficiale di ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
     <value>Questa sezione include la versione ufficiale di thinkPLM 2016.</value>
