--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -301,7 +301,7 @@
     <value>This self extracting file will install the official ThinkDesign suite 2015 64bit SP2.</value>
   </data>
   <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
-    <value>Recommended version.</value>
+    <value>This self extracting file will install the official ThinkDesign suite 2015 64bit SP3.</value>
   </data>
   <data name="Description2015thinkPLMSP2" xml:space="preserve">
     <value>This section includes thinkPLM 2015 SP2.</value>
@@ -316,7 +316,7 @@
     <value>TD 2016 legacy version for old systems.</value>
   </data>
   <data name="Description2016ThinkDesign64bit" xml:space="preserve">
-    <value>Official release of ThinkDesign 2016.</value>
+    <value>Recommended version. Official release of ThinkDesign 2016.</value>
   </data>
   <data name="Description2016thinkPLM" xml:space="preserve">
     <value>This section includes thinkPLM 2016 official version.</value>
