change the upgrade button to change version

--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -712,7 +712,7 @@
     <value>Update</value>
   </data>
   <data name="ButtonUpgrade" xml:space="preserve">
-    <value>Upgrade</value>
+    <value>Versionswechsel</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
     <value>Geändert am</value>
