--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -712,7 +712,7 @@
     <value>更新</value>
   </data>
   <data name="ButtonUpgrade" xml:space="preserve">
-    <value>Upgrade</value>
+    <value>バージョン変更</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
     <value>Modified On</value>
