--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -712,7 +712,7 @@
     <value>갱신</value>
   </data>
   <data name="ButtonUpgrade" xml:space="preserve">
-    <value>Upgrade</value>
+    <value>버전변경</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
     <value>Modified On</value>
