--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -712,7 +712,7 @@
     <value>Update</value>
   </data>
   <data name="ButtonUpgrade" xml:space="preserve">
-    <value>Upgrade</value>
+    <value>Change Version</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
     <value>Modified On</value>
