--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -712,7 +712,7 @@
     <value>Aggiorna</value>
   </data>
   <data name="ButtonUpgrade" xml:space="preserve">
-    <value>Aggiorna</value>
+    <value>Cambia versione</value>
   </data>
   <data name="ModifiedOn" xml:space="preserve">
     <value>Modificato il</value>
