minor fixes on case management and approved button on orders

--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -717,4 +717,7 @@
   <data name="ModifiedOn" xml:space="preserve">
     <value>修正日</value>
   </data>
+  <data name="ButtonApprove" xml:space="preserve">
+    <value>Approve</value>
+  </data>
 </root>
