--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -717,4 +717,7 @@
   <data name="ModifiedOn" xml:space="preserve">
     <value>Geändert am</value>
   </data>
+  <data name="ButtonApprove" xml:space="preserve">
+    <value>Approve</value>
+  </data>
 </root>
