--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -717,4 +717,7 @@
   <data name="ModifiedOn" xml:space="preserve">
     <value>Modificato il</value>
   </data>
+  <data name="ButtonApprove" xml:space="preserve">
+    <value>Approva</value>
+  </data>
 </root>
