--- a/DPTnew/DPTnew/Localization/Resource.de-DE.resx
+++ b/DPTnew/DPTnew/Localization/Resource.de-DE.resx
@@ -190,7 +190,7 @@
     <value>ThinkDesign Hilfe</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
-    <value>Release Notes &amp; Benutzerhandbuch 2016 - in Arbeit.</value>
+    <value>Release Notes &amp; Benutzerhandbuch 2016.</value>
   </data>
   <data name="View_Home_UserGuidebook" xml:space="preserve">
     <value>Anwenderhandbuch</value>
@@ -652,7 +652,7 @@
     <value>Bundesland</value>
   </data>
   <data name="ZIP" xml:space="preserve">
-    <value>ZIP</value>
+    <value>PLZ</value>
   </data>
   <data name="AssignedTo" xml:space="preserve">
     <value>Zugewiesen an</value>
