--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -472,7 +472,7 @@
     <value>ThinkDesign Help</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
-    <value>Note di rilascio e Manuale Utente TD2016 - work in progress.</value>
+    <value>Note di rilascio e Manuale Utente TD2016.</value>
   </data>
   <data name="View_Home_UserGuidebook" xml:space="preserve">
     <value>User Guidebook</value>
@@ -652,7 +652,7 @@
     <value>Provincia</value>
   </data>
   <data name="ZIP" xml:space="preserve">
-    <value>Codice Postale</value>
+    <value>CAP</value>
   </data>
   <data name="AssignedTo" xml:space="preserve">
     <value>Assegnato a</value>
