--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -472,7 +472,7 @@
     <value>ThinkDesign ヘルプ（英語）</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
-    <value>バージョン 2016 用リリースノートとヘルプ（作業中）</value>
+    <value>バージョン 2016 用リリースノートとヘルプ</value>
   </data>
   <data name="View_Home_UserGuidebook" xml:space="preserve">
     <value>ユーザーガイドブック（英語）</value>
