--- a/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ko-KR.resx
@@ -472,7 +472,7 @@
     <value>ThinkDesign 도움말(영어)</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
-    <value>버전 2016 용 릴리스 노트 및 도움말 (작업중)</value>
+    <value>버전 2016 용 릴리스 노트 및 도움말</value>
   </data>
   <data name="View_Home_UserGuidebook" xml:space="preserve">
     <value>사용자 가이드 북 (영어)</value>
