--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -720,4 +720,13 @@
   <data name="ButtonApprove" xml:space="preserve">
     <value>Approva</value>
   </data>
+  <data name="ButtonBook" xml:space="preserve">
+    <value>Registra</value>
+  </data>
+  <data name="ButtonCheck" xml:space="preserve">
+    <value>Verifica</value>
+  </data>
+  <data name="ButtonReject" xml:space="preserve">
+    <value>Rifiuta</value>
+  </data>
 </root>
