--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -720,4 +720,13 @@
   <data name="ButtonApprove" xml:space="preserve">
     <value>Approve</value>
   </data>
+  <data name="ButtonBook" xml:space="preserve">
+    <value>Book</value>
+  </data>
+  <data name="ButtonCheck" xml:space="preserve">
+    <value>Check</value>
+  </data>
+  <data name="ButtonReject" xml:space="preserve">
+    <value>Reject</value>
+  </data>
 </root>
